Correction of white space

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,5 @@
 .homeSection {
   min-height: 100vh;
-  height: auto;
   width: 100%;
   display: flex;
   align-items: center;
@@ -17,9 +16,4 @@
   width: 100%;
   z-index: -1;
   position: absolute;
-}
-
-.svg {
-  width:300px;
-  height:500px;
 }
